--- a/rs/nns/integration_tests/BUILD.bazel
+++ b/rs/nns/integration_tests/BUILD.bazel
@@ -85,7 +85,7 @@ DEPENDENCIES = BASE_DEPENDENCIES + [
 ] + select({
     "@rules_rust//rust/platform:wasm32-unknown-unknown": [],
     "//conditions:default": [
-        "//rs/nns/test_utils",
+        "//rs/nns/test_utils:ic_nns_test_utils",
         "//rs/nns/gtc",
     ],
 })
@@ -98,7 +98,7 @@ DEPENDENCIES_WITH_TEST_FEATURES = BASE_DEPENDENCIES + [
 ] + select({
     "@rules_rust//rust/platform:wasm32-unknown-unknown": [],
     "//conditions:default": [
-        "//rs/nns/test_utils:test_utils--test_feature",
+        "//rs/nns/test_utils:ic_nns_test_utils--test_feature",
         "//rs/nns/gtc:gtc--test_feature",
     ],
 })
