--- a/rs/tests/consensus/tecdsa/utils/BUILD.bazel
+++ b/rs/tests/consensus/tecdsa/utils/BUILD.bazel
@@ -17,7 +17,7 @@ rust_library(
         "//rs/nns/common",
         "//rs/nns/constants",
         "//rs/nns/governance/api",
-        "//rs/nns/test_utils",
+        "//rs/nns/test_utils:ic_nns_test_utils",
         "//rs/prep",
         "//rs/registry/canister",
         "//rs/registry/subnet_features",
