--- a/rs/tests/nested/BUILD.bazel
+++ b/rs/tests/nested/BUILD.bazel
@@ -9,7 +9,7 @@ DEPENDENCIES = [
     "//rs/canister_client",
     "//rs/nervous_system/common/test_keys",
     "//rs/nns/common",
-    "//rs/nns/test_utils",
+    "//rs/nns/test_utils:ic_nns_test_utils",
     "//rs/registry/subnet_type",
     "//rs/rust_canisters/canister_test",
     "//rs/tests/consensus/utils",
