--- a/rs/crypto/BUILD.bazel
+++ b/rs/crypto/BUILD.bazel
@@ -74,7 +74,7 @@ DEV_DEPENDENCIES = [
     "//rs/crypto/secp256k1",
     "//rs/crypto/sha2",
     "//rs/crypto/temp_crypto",
-    "//rs/crypto/test_utils",
+    "//rs/crypto/test_utils:ic_crypto_test_utils",
     "//rs/crypto/test_utils/canister_sigs",
     "//rs/crypto/test_utils/canister_threshold_sigs",
     "//rs/crypto/test_utils/csp",
