--- a/rs/crypto/for_verification_only/BUILD.bazel
+++ b/rs/crypto/for_verification_only/BUILD.bazel
@@ -15,7 +15,7 @@ MACRO_DEPENDENCIES = []
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/crypto/interfaces/sig_verification",
-    "//rs/crypto/test_utils",
+    "//rs/crypto/test_utils:ic_crypto_test_utils",
     "//rs/crypto/test_utils/reproducible_rng",
     "//rs/registry/fake",
     "//rs/registry/proto_data_provider",
