--- a/rs/crypto/internal/crypto_lib/basic_sig/iccsa/BUILD.bazel
+++ b/rs/crypto/internal/crypto_lib/basic_sig/iccsa/BUILD.bazel
@@ -26,7 +26,7 @@ DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/certification/test-utils",
     "//rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils",
-    "//rs/crypto/test_utils",
+    "//rs/crypto/test_utils:ic_crypto_test_utils",
     "//rs/crypto/test_utils/reproducible_rng",
     "//rs/interfaces",
     "@crate_index//:assert_matches",
