--- a/rs/crypto/node_key_generation/BUILD.bazel
+++ b/rs/crypto/node_key_generation/BUILD.bazel
@@ -26,7 +26,7 @@ DEV_DEPENDENCIES = [
     "//rs/crypto",
     "//rs/crypto/internal/csp_test_utils",
     "//rs/crypto/temp_crypto",
-    "//rs/crypto/test_utils",
+    "//rs/crypto/test_utils:ic_crypto_test_utils",
     "//rs/crypto/test_utils/keys",
     "//rs/crypto/test_utils/local_csp_vault",
     "//rs/monitoring/metrics",
