--- a/rs/crypto/temp_crypto/BUILD.bazel
+++ b/rs/crypto/temp_crypto/BUILD.bazel
@@ -36,7 +36,7 @@ MACRO_DEPENDENCIES = [
 
 DEV_DEPENDENCIES = [
     # Keep sorted.
-    "//rs/crypto/test_utils",
+    "//rs/crypto/test_utils:ic_crypto_test_utils",
     "//rs/crypto/test_utils/reproducible_rng",
     "//rs/test_utilities/time",
     "//rs/types/types_test_utils",
