--- a/rs/crypto/test_utils/BUILD.bazel
+++ b/rs/crypto/test_utils/BUILD.bazel
@@ -1,7 +1,7 @@
 load("@rules_rust//rust:defs.bzl", "rust_library")
 
 rust_library(
-    name = "test_utils",
+    name = "ic_crypto_test_utils",
     testonly = True,
     srcs = glob(["src/**"]),
     crate_name = "ic_crypto_test_utils",
