--- a/rs/validator/http_request_test_utils/BUILD.bazel
+++ b/rs/validator/http_request_test_utils/BUILD.bazel
@@ -12,7 +12,7 @@ DEPENDENCIES = [
     "//rs/crypto/internal/crypto_lib/threshold_sig/bls12_381",
     "//rs/crypto/internal/crypto_lib/types",
     "//rs/crypto/secrets_containers",
-    "//rs/crypto/test_utils",
+    "//rs/crypto/test_utils:ic_crypto_test_utils",
     "//rs/crypto/tree_hash",
     "//rs/types/types",
     "@crate_index//:rand",
