--- a/rs/rosetta-api/icp/runner/BUILD.bazel
+++ b/rs/rosetta-api/icp/runner/BUILD.bazel
@@ -42,7 +42,7 @@ rust_test(
         "//packages/pocket-ic",
         "//rs/ledger_suite/icp:icp_ledger",
         "//rs/ledger_suite/icp/test_utils",
-        "//rs/rosetta-api/icp/test_utils",
+        "//rs/rosetta-api/icp/test_utils:ic_rosetta_test_utils",
         "@crate_index//:candid",
         "@crate_index//:reqwest",
         "@crate_index//:tempfile",
