--- a/rs/ledger_suite/icrc1/index/BUILD.bazel
+++ b/rs/ledger_suite/icrc1/index/BUILD.bazel
@@ -104,7 +104,7 @@ rust_ic_test(
         "//rs/ledger_suite/icrc1/ledger",
         "//rs/ledger_suite/icrc1/tokens_u64",
         "//rs/ledger_suite/tests/sm-tests:ic-ledger-suite-state-machine-tests",
-        "//rs/rosetta-api/icp/test_utils",
+        "//rs/rosetta-api/icp/test_utils:ic_rosetta_test_utils",
         "//rs/rust_canisters/http_types",
         "//rs/state_machine_tests",
         "//rs/test_utilities/load_wasm",
