--- a/rs/rosetta-api/icp/BUILD.bazel
+++ b/rs/rosetta-api/icp/BUILD.bazel
@@ -83,7 +83,7 @@ DEV_DEPENDENCIES = [
     "//rs/rosetta-api/icp/client:ic-icp-rosetta-client",
     "//rs/rosetta-api/icp/ledger_canister_blocks_synchronizer/test_utils",
     "//rs/rosetta-api/icp/runner:ic-icp-rosetta-runner",
-    "//rs/rosetta-api/icp/test_utils",
+    "//rs/rosetta-api/icp/test_utils:ic_rosetta_test_utils",
     "//rs/types/base_types",
     "@crate_index//:futures",
     "@crate_index//:ic-cdk",
