//rs/ledger_suite/icp/test_utils:test_utils -> //rs/ledger_suite/icp/test_utils:ic_ledger_test_utils

--- a/rs/ledger_suite/icp/BUILD.bazel
+++ b/rs/ledger_suite/icp/BUILD.bazel
@@ -135,7 +135,7 @@ rust_ic_test_suite(
         "//rs/ledger_suite/common/ledger_canister_core",
         "//rs/ledger_suite/common/ledger_core",
         "//rs/ledger_suite/icp/index:ic-icp-index",
-        "//rs/ledger_suite/icp/test_utils",
+        "//rs/ledger_suite/icp/test_utils:ic_ledger_test_utils",
         "//rs/nns/constants",
         "//rs/rust_canisters/canister_test",
         "//rs/rust_canisters/dfn_candid",
@@ -210,7 +210,7 @@ rust_ic_test_suite(
         "//packages/icrc-ledger-types:icrc_ledger_types",
         "//rs/ledger_suite/common/ledger_core",
         "//rs/ledger_suite/icp/index:ic-icp-index",
-        "//rs/ledger_suite/icp/test_utils",
+        "//rs/ledger_suite/icp/test_utils:ic_ledger_test_utils",
         "//rs/ledger_suite/tests/sm-tests:ic-ledger-suite-state-machine-tests",
         "//rs/nns/constants",
         "//rs/nns/test_utils/golden_nns_state",
