--- a/rs/ledger_suite/icp/index/BUILD.bazel
+++ b/rs/ledger_suite/icp/index/BUILD.bazel
@@ -30,7 +30,7 @@ DEPENDENCIES = [
 
 DEV_DEPENDENCIES = [
     # Keep sorted.
-    "//rs/ledger_suite/icp/test_utils",
+    "//rs/ledger_suite/icp/test_utils:ic_ledger_test_utils",
     "//rs/ledger_suite/tests/sm-tests:ic-ledger-suite-state-machine-tests",
     "//rs/rosetta-api/icp/test_utils:ic_rosetta_test_utils",
     "//rs/state_machine_tests",
