--- a/rs/ledger_suite/icp/archive/BUILD.bazel
+++ b/rs/ledger_suite/icp/archive/BUILD.bazel
@@ -65,7 +65,7 @@ rust_ic_test(
         "//packages/pocket-ic",
         "//rs/ledger_suite/common/ledger_core",
         "//rs/ledger_suite/icp:icp_ledger",
-        "//rs/ledger_suite/icp/test_utils",
+        "//rs/ledger_suite/icp/test_utils:ic_ledger_test_utils",
         "//rs/rust_canisters/http_types",
         "//rs/types/base_types",
         "@crate_index//:candid",
