--- a/rs/ledger_suite/icp/test_utils/BUILD.bazel
+++ b/rs/ledger_suite/icp/test_utils/BUILD.bazel
@@ -3,7 +3,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//visibility:public"])
 
 rust_library(
-    name = "test_utils",
+    name = "ic_ledger_test_utils",
     testonly = True,
     srcs = glob(["src/**/*.rs"]),
     crate_name = "ic_ledger_test_utils",
