--- a/rs/rosetta-api/icp/BUILD.bazel
+++ b/rs/rosetta-api/icp/BUILD.bazel
@@ -71,7 +71,7 @@ DEV_DEPENDENCIES = [
     "//packages/icrc-ledger-types:icrc_ledger_types",
     "//packages/pocket-ic",
     "//rs/crypto/ed25519",
-    "//rs/ledger_suite/icp/test_utils",
+    "//rs/ledger_suite/icp/test_utils:ic_ledger_test_utils",
     "//rs/ledger_suite/icrc1",
     "//rs/ledger_suite/icrc1/test_utils",
     "//rs/ledger_suite/icrc1/tokens_u256",
