--- a/rs/rosetta-api/icp/client/BUILD.bazel
+++ b/rs/rosetta-api/icp/client/BUILD.bazel
@@ -29,7 +29,7 @@ DEV_DEPENDENCIES = [
     ":ic-icp-rosetta-client",
     "//packages/pocket-ic:pocket-ic",
     "//rs/ledger_suite/icp:icp_ledger",
-    "//rs/ledger_suite/icp/test_utils",
+    "//rs/ledger_suite/icp/test_utils:ic_ledger_test_utils",
     "//rs/rosetta-api/icp/runner:ic-icp-rosetta-runner",
     "//rs/rosetta-api/icp/test_utils:ic_rosetta_test_utils",
     "@crate_index//:candid",
