--- a/rs/rosetta-api/icp/tests/integration_tests/BUILD.bazel
+++ b/rs/rosetta-api/icp/tests/integration_tests/BUILD.bazel
@@ -9,7 +9,7 @@ DEPENDENCIES = [
     "//packages/pocket-ic:pocket-ic",
     "//rs/ledger_suite/icp:icp_ledger",
     "//rs/ledger_suite/icp/ledger",
-    "//rs/ledger_suite/icp/test_utils",
+    "//rs/ledger_suite/icp/test_utils:ic_ledger_test_utils",
     "//rs/ledger_suite/icrc1",
     "//rs/rosetta-api/common/rosetta_core:rosetta-core",
     "//rs/rosetta-api/icp:rosetta-api",
