//rs/crypto/tree_hash/test_utils:test_utils -> //rs/crypto/tree_hash/test_utils:ic_crypto_tree_hash_test_utils

--- a/rs/canonical_state/tree_hash/BUILD.bazel
+++ b/rs/canonical_state/tree_hash/BUILD.bazel
@@ -15,7 +15,7 @@ DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/canonical_state/tree_hash/test_utils:ic_canonical_state_tree_hash_test_utils",
     "//rs/crypto/test_utils/reproducible_rng",
-    "//rs/crypto/tree_hash/test_utils",
+    "//rs/crypto/tree_hash/test_utils:ic_crypto_tree_hash_test_utils",
     "@crate_index//:assert_matches",
     "@crate_index//:proptest",
     "@crate_index//:rand",
