--- a/rs/canonical_state/tree_hash/test_utils/BUILD.bazel
+++ b/rs/canonical_state/tree_hash/test_utils/BUILD.bazel
@@ -7,7 +7,7 @@ DEPENDENCIES = [
     # Keep sorted.
     "//rs/canonical_state/tree_hash",
     "//rs/crypto/tree_hash",
-    "//rs/crypto/tree_hash/test_utils",
+    "//rs/crypto/tree_hash/test_utils:ic_crypto_tree_hash_test_utils",
     "@crate_index//:rand",
 ]
 
