--- a/rs/crypto/tree_hash/BUILD.bazel
+++ b/rs/crypto/tree_hash/BUILD.bazel
@@ -17,7 +17,7 @@ DEPENDENCIES = [
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/crypto/test_utils/reproducible_rng",
-    "//rs/crypto/tree_hash/test_utils",
+    "//rs/crypto/tree_hash/test_utils:ic_crypto_tree_hash_test_utils",
     "@crate_index//:assert_matches",
     "@crate_index//:criterion",
     "@crate_index//:maplit",
