--- a/rs/crypto/tree_hash/fuzz/check_witness_equality_utils/BUILD.bazel
+++ b/rs/crypto/tree_hash/fuzz/check_witness_equality_utils/BUILD.bazel
@@ -8,7 +8,7 @@ DEPENDENCIES = [
     "//rs/canonical_state/tree_hash/test_utils:ic_canonical_state_tree_hash_test_utils",
     "//rs/crypto/test_utils/reproducible_rng",
     "//rs/crypto/tree_hash",
-    "//rs/crypto/tree_hash/test_utils",
+    "//rs/crypto/tree_hash/test_utils:ic_crypto_tree_hash_test_utils",
     "@crate_index//:rand",
     "@crate_index//:rand_chacha",
 ]
