//rs/ledger_suite/icrc1/test_utils:test_utils -> //rs/ledger_suite/icrc1/test_utils:ic_icrc1_test_utils

--- a/rs/ledger_suite/icrc1/BUILD.bazel
+++ b/rs/ledger_suite/icrc1/BUILD.bazel
@@ -33,7 +33,7 @@ DEV_DEPENDENCIES = [
     "//packages/icrc-ledger-types:icrc_ledger_types",
     "//rs/ledger_suite/common/ledger_canister_core",
     "//rs/ledger_suite/common/ledger_core",
-    "//rs/ledger_suite/icrc1/test_utils",
+    "//rs/ledger_suite/icrc1/test_utils:ic_icrc1_test_utils",
     "@crate_index//:candid",
     "@crate_index//:ciborium",
     "@crate_index//:leb128",
@@ -151,7 +151,7 @@ rust_test(
             "//rs/nns/test_utils/golden_nns_state",
             "//rs/ledger_suite/tests/sm-tests:ic-ledger-suite-state-machine-tests" + name_suffix,
             "//rs/ledger_suite/common/ledger_core",
-            "//rs/ledger_suite/icrc1/test_utils",
+            "//rs/ledger_suite/icrc1/test_utils:ic_icrc1_test_utils",
             "//rs/ledger_suite/icrc1/tokens_u256",
             "//rs/ledger_suite/icrc1/tokens_u64",
             "//rs/rust_canisters/canister_test",
