--- a/rs/ledger_suite/icrc1/test_utils/BUILD.bazel
+++ b/rs/ledger_suite/icrc1/test_utils/BUILD.bazel
@@ -26,7 +26,7 @@ DEV_DEPENDENCIES = [
 ]
 
 rust_library(
-    name = "test_utils",
+    name = "ic_icrc1_test_utils",
     testonly = True,
     srcs = glob(["src/**"]),
     crate_name = "ic_icrc1_test_utils",
@@ -35,8 +35,8 @@ rust_library(
 )
 
 rust_test(
-    name = "icrc1_utils_unit_test",
-    crate = ":test_utils",
+    name = "ic_icrc1_test_utils_unit_test",
+    crate = ":ic_icrc1_test_utils",
     version = "0.9.0",
     deps = DEV_DEPENDENCIES,
 )
