--- a/rs/ledger_suite/tests/sm-tests/BUILD.bazel
+++ b/rs/ledger_suite/tests/sm-tests/BUILD.bazel
@@ -10,7 +10,7 @@ DEPENDENCIES = [
     "//rs/ledger_suite/common/ledger_core",
     "//rs/ledger_suite/icrc1",
     "//rs/ledger_suite/icrc1/ledger",
-    "//rs/ledger_suite/icrc1/test_utils",
+    "//rs/ledger_suite/icrc1/test_utils:ic_icrc1_test_utils",
     "//rs/rosetta-api/icp/test_utils:ic_rosetta_test_utils",
     "//rs/rust_canisters/http_types",
     "//rs/state_machine_tests",
