//rs/nervous_system/common/test_utils:test_utils -> //rs/nervous_system/common/test_utils:ic_nervous_system_common_test_utils

--- a/rs/nns/governance/BUILD.bazel
+++ b/rs/nns/governance/BUILD.bazel
@@ -111,7 +111,7 @@ BUILD_DEPENDENCIES = [
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/config",
-    "//rs/nervous_system/common/test_utils",
+    "//rs/nervous_system/common/test_utils:ic_nervous_system_common_test_utils",
     "//rs/nns/governance/protobuf_generator:lib",
     "//rs/sns/swap/protobuf_generator:lib",
     "//rs/test_utilities/compare_dirs",
