--- a/rs/sns/swap/BUILD.bazel
+++ b/rs/sns/swap/BUILD.bazel
@@ -62,7 +62,7 @@ BUILD_DEPENDENCIES = [
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/nervous_system/common/test_keys",
-    "//rs/nervous_system/common/test_utils",
+    "//rs/nervous_system/common/test_utils:ic_nervous_system_common_test_utils",
     "//rs/sns/swap/protobuf_generator:lib",
     "//rs/test_utilities/compare_dirs",
     "@crate_index//:assert_matches",
