--- a/rs/ethereum/cketh/test_utils/BUILD.bazel
+++ b/rs/ethereum/cketh/test_utils/BUILD.bazel
@@ -22,7 +22,7 @@ package(default_visibility = ["//visibility:public"])
             "//packages/icrc-ledger-types:icrc_ledger_types",
             "//rs/ethereum/cketh/minter",
             "//rs/ethereum/ledger-suite-orchestrator:ledger_suite_orchestrator",
-            "//rs/ethereum/ledger-suite-orchestrator/test_utils",
+            "//rs/ethereum/ledger-suite-orchestrator/test_utils:ic_ledger_suite_orchestrator_test_utils",
             "//rs/ledger_suite/icrc1/ledger",
             "//rs/rust_canisters/http_types",
             "//rs/state_machine_tests",
