//rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils:test_utils -> //rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils:ic_crypto_internal_basic_sig_iccsa_test_utils

--- a/rs/crypto/internal/crypto_lib/basic_sig/iccsa/BUILD.bazel
+++ b/rs/crypto/internal/crypto_lib/basic_sig/iccsa/BUILD.bazel
@@ -25,7 +25,7 @@ MACRO_DEPENDENCIES = []
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/certification/test-utils",
-    "//rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils",
+    "//rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils:ic_crypto_internal_basic_sig_iccsa_test_utils",
     "//rs/crypto/test_utils:ic_crypto_test_utils",
     "//rs/crypto/test_utils/reproducible_rng",
     "//rs/interfaces",
