--- a/rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils/BUILD.bazel
+++ b/rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils/BUILD.bazel
@@ -15,7 +15,7 @@ DEPENDENCIES = [
 ]
 
 rust_library(
-    name = "test_utils",
+    name = "ic_crypto_internal_basic_sig_iccsa_test_utils",
     testonly = True,
     srcs = glob(["src/**"]),
     crate_name = "ic_crypto_internal_basic_sig_iccsa_test_utils",
