--- a/rs/crypto/test_utils/canister_sigs/BUILD.bazel
+++ b/rs/crypto/test_utils/canister_sigs/BUILD.bazel
@@ -12,7 +12,7 @@ rust_library(
         # Keep sorted.
         "//rs/certification/test-utils",
         "//rs/crypto/internal/crypto_lib/basic_sig/iccsa",
-        "//rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils",
+        "//rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils:ic_crypto_internal_basic_sig_iccsa_test_utils",
         "//rs/crypto/temp_crypto",
         "//rs/crypto/test_utils:ic_crypto_test_utils",
         "//rs/types/types",
