//rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/test_utils:test_utils -> //rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/test_utils:ic_crypto_internal_threshold_sig_canister_threshold_sig_test_utils

--- a/rs/crypto/BUILD.bazel
+++ b/rs/crypto/BUILD.bazel
@@ -64,7 +64,7 @@ DEV_DEPENDENCIES = [
     "//rs/crypto/internal/crypto_lib/basic_sig/ecdsa_secp256k1",
     "//rs/crypto/internal/crypto_lib/basic_sig/ecdsa_secp256r1",
     "//rs/crypto/internal/crypto_lib/basic_sig/rsa_pkcs1",
-    "//rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/test_utils",
+    "//rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/test_utils:ic_crypto_internal_threshold_sig_canister_threshold_sig_test_utils",
     "//rs/crypto/internal/crypto_lib/tls",
     "//rs/crypto/internal/crypto_service_provider/csp_proptest_utils",
     "//rs/crypto/internal/csp_test_utils",
