--- a/rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/test_utils/BUILD.bazel
+++ b/rs/crypto/internal/crypto_lib/threshold_sig/canister_threshold_sig/test_utils/BUILD.bazel
@@ -3,7 +3,7 @@ load("@rules_rust//rust:defs.bzl", "rust_library")
 package(default_visibility = ["//rs/crypto:__subpackages__"])
 
 rust_library(
-    name = "test_utils",
+    name = "ic_crypto_internal_threshold_sig_canister_threshold_sig_test_utils",
     testonly = True,
     srcs = glob(["src/**"]),
     crate_name = "ic_crypto_internal_threshold_sig_canister_threshold_sig_test_utils",
