--- a/rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils/BUILD.bazel
+++ b/rs/crypto/internal/crypto_lib/basic_sig/iccsa/test_utils/BUILD.bazel
@@ -7,7 +7,7 @@ package(default_visibility = [
 
 DEPENDENCIES = [
     # Keep sorted.
-    "//rs/certification/test-utils",
+    "//rs/certification/test-utils:ic_certification_test_utils",
     "//rs/crypto/sha2",
     "//rs/crypto/tree_hash",
     "//rs/types/types",
