--- a/rs/boundary_node/ic_boundary/BUILD.bazel
+++ b/rs/boundary_node/ic_boundary/BUILD.bazel
@@ -5,7 +5,7 @@ package(default_visibility = ["//visibility:public"])
 
 DEPENDENCIES = [
     # Keep sorted.
-    "//rs/certification/test-utils",
+    "//rs/certification/test-utils:ic_certification_test_utils",
     "//rs/config",
     "//rs/crypto/ed25519",
     "//rs/crypto/tree_hash",
