--- a/rs/canister_client/BUILD.bazel
+++ b/rs/canister_client/BUILD.bazel
@@ -47,7 +47,7 @@ MACRO_DEPENDENCIES = []
 
 DEV_DEPENDENCIES = [
     # Keep sorted.
-    "//rs/certification/test-utils",
+    "//rs/certification/test-utils:ic_certification_test_utils",
     "//rs/crypto/test_utils/reproducible_rng",
     "//rs/crypto/test_utils/root_of_trust",
     "//rs/crypto/test_utils/tls",
