--- a/rs/certification/BUILD.bazel
+++ b/rs/certification/BUILD.bazel
@@ -18,7 +18,7 @@ DEPENDENCIES = [
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/canonical_state",
-    "//rs/certification/test-utils",
+    "//rs/certification/test-utils:ic_certification_test_utils",
     "//rs/crypto/internal/crypto_lib/types",
     "//rs/crypto/test_utils/reproducible_rng",
     "//rs/types/base_types",
