--- a/rs/registry/nns_data_provider/BUILD.bazel
+++ b/rs/registry/nns_data_provider/BUILD.bazel
@@ -21,7 +21,7 @@ DEPENDENCIES = [
 
 DEV_DEPENDENCIES = [
     # Keep sorted.
-    "//rs/certification/test-utils",
+    "//rs/certification/test-utils:ic_certification_test_utils",
     "@crate_index//:leb128",
 ]
 
