--- a/rs/validator/ingress_message/BUILD.bazel
+++ b/rs/validator/ingress_message/BUILD.bazel
@@ -18,7 +18,7 @@ DEPENDENCIES = [
 DEV_DEPENDENCIES = [
     # Keep sorted.
     "//rs/canister_client/sender",
-    "//rs/certification/test-utils",
+    "//rs/certification/test-utils:ic_certification_test_utils",
     "//rs/crypto/test_utils/canister_sigs",
     "//rs/crypto/test_utils/reproducible_rng",
     "//rs/crypto/test_utils/root_of_trust",
